# rust-githooks

./: Cargo.toml  githooks.json
src/: config.rs  lib.rs  main.rs  repo.rs
src/hooks/: action.rs  android_resource_action.rs  chrome_null_marked_action.rs  commit_message_reflow_action.rs  config.rs  gerrit.rs  hook.rs  hooks.rs  mod.rs  shell_action.rs  shell_utils.rs  submodule_action.rs
src/repo/: config.rs  item.rs  mod.rs  repo.rs
src/ui/: hook_tree_view.rs  mod.rs
