[package]
name = "githooks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
git2 = "0.19.0"
fs_extra = "1.3.0"
which = "6.0.1"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_regex = "1.0"
regex = "1"
dirs = "5"
env_logger = "0"
crossterm = "0"
tui = "0"